--- a/sddi-social/Dockerfile
+++ b/sddi-social/Dockerfile
@@ -27,7 +27,7 @@ FROM ${BASEIMAGE_REPOSITORY}:${BASEIMAGE_VERSION} as runtime
 USER root
 
 ENV CKAN__PLUGINS "image_view text_view recline_view datastore datapusher \
-  hierarchy_display hierarchy_form display_group relation \
+  hierarchy_display hierarchy_form display_group relation userautoaddgroup \
   spatial_metadata spatial_query datesearch repeating composite scheming_datasets \
   resource_proxy geo_view geojson_view wmts_view shp_view \
   dcat dcat_json_interface structured_data \
