tum-gis -> bwibo

--- a/sddi/Dockerfile
+++ b/sddi/Dockerfile
@@ -1,7 +1,7 @@
 # #############################################################################
 # # Build stage
 # #############################################################################
-ARG BASEIMAGE_REPOSITORY=ghcr.io/tum-gis/ckan-sddi-base
+ARG BASEIMAGE_REPOSITORY=ghcr.io/bwibo/ckan-sddi-base
 ARG BASEIMAGE_VERSION=latest
 ARG CKAN_VERSION_BUILD_STAGE=2.9.7-dev
 
