tum-gis -> bwibo

--- a/sddi/Dockerfile.debug
+++ b/sddi/Dockerfile.debug
@@ -1,4 +1,4 @@
-ARG BASEIMAGE_REPOSITORY=ghcr.io/tum-gis/ckan-sddi
+ARG BASEIMAGE_REPOSITORY=ghcr.io/bwibo/ckan-sddi
 ARG BASEIMAGE_VERSION=edge
 
 FROM ${BASEIMAGE_REPOSITORY}:${BASEIMAGE_VERSION}
