--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,14 +62,14 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/bwibo/ckan-${{ matrix.context }}
           tags: |
-            type=semver,pattern={{version}},suffix=-debug
-            type=semver,pattern={{major}}.{{minor}},suffix=-debug
+            type=semver,pattern={{version}},suffix=-debug,onlatest=true,priority=600
+            type=semver,pattern={{major}}.{{minor}},suffix=-debug,onlatest=true,priority=600
           labels: |
             maintainer=Chair of Geoinformatics, Technical University of Munich (TUM)
             org.opencontainers.image.vendor=Chair of Geoinformatics, Technical University of Munich (TUM)
             org.opencontainers.image.title=ckan-sddi-docker
 
-      - name: Build and publish ${{ env.REGISTRY }}/bwibo/ckan-${{ matrix.context }}
+      - name: Build and publish ${{ env.REGISTRY }}/bwibo/ckan-${{ matrix.context }}-debug
         uses: docker/build-push-action@v4
         with:
           context: ${{ matrix.context }}
